<?xml version="1.0"?>
<package format="3">
  <name>ms200p</name>
  <version>1.0.0</version>
  <description>ROS2 driver for ms200p</description>
  <maintainer email="classnoda@gmail.com">noda</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
